HIPPOTHEME-5: Fix anchors and container body scrollbar

--- a/src/less/_hippo-navbar.less
+++ b/src/less/_hippo-navbar.less
@@ -14,27 +14,15 @@
  * limitations under the License.
  */
 
-body {
-    position: relative;
-}
-
-html, body {
-    height: 100%;
-    overflow: hidden;
-}
-
 .container-has-hippo-navbar {
-    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     overflow: auto;
     padding-top: 15px;
     margin-top: @hippo-navbar-height;
-}
-
-.anchor {
-    display: block;
-    visibility: hidden;
-    position: relative;
-    top: -(@hippo-navbar-height);
 }
 
 .navbar-icons {
@@ -82,7 +70,7 @@ html, body {
 }
 
 @media (min-width: @screen-sm-min) {
-    .hippo-navbar ~ .container-has-hippo-navbar {
+    .container-has-hippo-navbar {
         margin-left: @side-navbar-width;
     }
 
@@ -90,11 +78,11 @@ html, body {
         width: 100%;
     }
 
-    .hippo-navbar .navbar-collapse.collapse {
+    .hippo-navbar .collapse {
         position: fixed;
         top: @hippo-navbar-height;
         left: 0;
-        height: 100% !important;
+        height: 100% !important; // Override !important bootstrap style
         max-height: none;
         width: @side-navbar-width;
         padding: 0;
@@ -107,10 +95,6 @@ html, body {
 
     .hippo-navbar .notification-badge {
         display: none;
-    }
-
-    .anchor {
-        top: 0;
     }
 }
 
