--- a/src/less/_log.less
+++ b/src/less/_log.less
@@ -58,6 +58,10 @@
         top: @log-alert-height;
     }
 
+    .container-has-hippo-navbar {
+        margin-top: @hippo-navbar-height + @log-alert-height;
+    }
+
     @media (min-width: @screen-sm-min) {
         .hippo-navbar .navbar-collapse.collapse {
             top: @log-alert-height + @hippo-navbar-height;
